# resman

./: .appveyor.yml  .gitignore  .travis.yml  LICENSE  README.md  bin2obj.sln  resman.sln
bin2obj/: CMakeLists.txt  bin2obj.vcxproj  bin2obj.vcxproj.filters  main.cpp
build_scripts/: travis_package.sh
build_scripts/linux/: travis_install.sh  travis_script.sh
build_scripts/osx/: travis_install.sh  travis_script.sh
build_scripts/win/: appveyor_package.bat
common/: exceptions.h  fileio.cpp  fileio.h  fsutil.h  libpacker.cpp  libpacker.h  objcompiler.cpp  objcompiler.h
docker_images/alpine-llvm-clang-dev/: Dockerfile
docker_images/ubuntu-llvm-clang-dev/: Dockerfile
docker_images/void-llvm-clang-dev/: Dockerfile
examples/: CMakeLists.txt  bar.txt  examples.vcxproj  examples.vcxproj.filters  foo.txt  main.cpp  resdefs.h
res_manager/: CMakeLists.txt  Resource.h  main.cpp  res_manager.vcxproj  res_manager.vcxproj.filters  test.h
rescomp/: CMakeLists.txt  CMakeLists_arch.txt  main.cpp  rescomp.vcxproj  rescomp.vcxproj.filters  setup.txt
test/: test.cpp  test.vcxproj
